tests/invalid/sum_list_wrong_start_type/main.py
xs: list[int] = [1, 2, 3]
x: int = sum(xs, 1.5)
